:zap: wip: bootstrap api server
